--- a/app.css
+++ b/app.css
@@ -10,56 +10,55 @@
 
 header {
     height: 100vh;
-    /* Full viewport height */
     background-color: #7BD3EA;
-    /*   background-image: url('your-image.jpg'); /* Add a background image */
-    background-size: cover;
-    /* Cover the whole area */
-    background-position: center;
-    /* Center the image */
     display: flex;
-    /*   flex-direction: column;*/
-    flex-wrap: wrap;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+
+    flex-wrap: wrap;
+    flex-direction: column;
+
+    vertical-align: center;
+
     color: black;
     position: relative;
 }
+
 
 header .headerText {
     background-color: rgba(255, 255, 255, 0.104);
     position: absolute;
     text-align: right;
     right: 50vw;
+    width: 400px;
 }
 
 header .headerImage {
-    background-color: rgba(210, 249, 54, 0.302);
     position: absolute;
     text-align: left;
     left: 50vw;
+    width: 400px;
 }
 
-header div {
-    width: 100%;
-    height: 100%;
+
+img {
+    width: 400px;
 }
 
+/*
 header h2 {
 
     margin-bottom: 0.5rem;
-    /* Adjust space below h1 */
+    /* Adjust space below h1 
 }
 
 header p {
 
     margin-bottom: 0.5rem;
-    /* Adjust space below h1 */
+    /* Adjust space below h1 
 }
 
-
-
-
+*/
 /* 
 body {
     font-family: Arial, sans-serif;
