--- a/app.css
+++ b/app.css
@@ -1,172 +1,376 @@
-/* styles.css */
+/* app.css */
 
 /* Reset some default styles */
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Nunito"
 }
+
+/* Fades and Animations */
+
+.fadeIn {
+    opacity: 0;
+    transition: opacity 0.6s ease-in;
+    /* Fade in over 0.7 seconds */
+}
+
+.fadeInFast {
+    opacity: 0;
+    transition: opacity 0.3s ease-in;
+    /* Fade in over 0.3 seconds */
+}
+
+@keyframes bounce {
+
+    0%,
+    100% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(-30px);
+    }
+}
+
+@keyframes bounceSmall {
+
+    0%,
+    100% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(-20px);
+    }
+}
+
+
+/* Header */
 
 header {
     height: 100vh;
     background-color: #7BD3EA;
+
     display: flex;
+    justify-content: space-around;
+    align-items: center;
+    vertical-align: center;
+}
+
+header .characterContainer {
     justify-content: center;
     align-items: center;
-
-    flex-wrap: wrap;
-    flex-direction: column;
-
     vertical-align: center;
 
+    display: flex;
+    flex-direction: row;
     color: black;
+
+    width: 50vw;
+}
+
+header .headerText {
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    width: 30em;
     position: relative;
 }
 
-
-header .headerText {
+header .headerText h1 {
+    position: relative;
     background-color: rgba(255, 255, 255, 0.104);
-    position: absolute;
-    text-align: right;
-    right: 50vw;
-    width: 400px;
+    border-radius: 15px;
+    width: 8em;
+    margin: 0.5em;
+}
+
+header .headerText h3 {
+
+    background-color: rgba(255, 255, 255, 0.104);
+    border-radius: 15px;
 }
 
 header .headerImage {
-    position: absolute;
-    text-align: left;
-    left: 50vw;
-    width: 400px;
-}
-
-
-img {
-    width: 400px;
-}
-
-/*
-header h2 {
-
-    margin-bottom: 0.5rem;
-    /* Adjust space below h1 
-}
-
-header p {
-
-    margin-bottom: 0.5rem;
-    /* Adjust space below h1 
-}
-
-*/
-/* 
-body {
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
-    background-color: #A1EEBD;
-    color: #333;
-}
-
-
-header h1 {
-    margin-bottom: 10px;
-    font-size: 2.5em;
-}
-
-header p {
-    font-size: 1.2em;
-}
-
-nav ul {
-    padding: 0;
-}
-
-nav ul li {
-    display: inline;
-    margin: 0 15px;
-}
-
-nav a {
-    color: #ffffff;
-    text-decoration: none;
-}
-
-section {
-    padding: 20px;
-    margin: 20px;
-    background: #ffffff;
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-}
-
-h2 {
-    border-bottom: 2px solid #35424a;
-    padding-bottom: 10px;
-}
-
-.project {
-    margin-bottom: 20px;
-}
-
-.project h3 {
-    margin: 10px 0;
-}
-
-.project a {
-    text-decoration: none;
-    color: #35424a;
-    font-weight: bold;
-}
-
-form {
-    display: flex;
-    flex-direction: column;
-}
-
-form label {
-    margin: 10px 0 5px;
-}
-
-form input, form textarea {
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-
-form button {
-    padding: 10px;
-    background-color: #35424a;
-    color: #ffffff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-form button:hover {
-    background-color: #2c3e50;
-}
-
-footer {
-    text-align: center;
-    padding: 10px 0;
-    background: #F6F7C4;
-    color: #000000;
+    width: 33em;
+    opacity: 0;
+    transition: opacity 0.2s ease-in;
+    /* Fade in over 2 seconds */
     position: relative;
-    bottom: 0;
-    width: 100%;
+    animation: bounce 0.4s infinite;
+    /* Default to bouncing */
+    animation-play-state: paused;
+    /* Start paused */
 }
 
-footer ul {
+header .headerImage img {
+    width: 20em !important;
+
+    margin: 3em;
     display: inline-block;
 }
 
-footer ul li {
-    display: inline;
-    margin: 0 10px;
+#amberPicture {
+    width: 400px;
 }
 
-footer a {
-    color: #ffffff;
-    text-decoration: none;
-}*/
+#chevDown {
+    position: absolute;
+    top: 90vh;
+    left: 50vw - 40px;
+    width: 80px;
+
+    animation: bounceSmall 1.5s infinite;
+    animation-play-state: paused;
+}
+
+#betweenHeaderAndProjects {
+    background: linear-gradient(to bottom, #7BD3EA, #A1EEBD);
+    width: vw;
+    height: 70px;
+}
+
+#projects {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+
+    width: vw;
+    height: vh;
+    background-color: #A1EEBD;
+}
+
+#projectsContainer {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    width: 60%;
+
+    background-color: #f0f0f055;
+
+    border-radius: 15px;
+    border: 5px solid #50fd90ae;
+}
+
+#projectsContainer h4 {
+    flex: 2;
+    margin: 5px;
+    position: relative;
+}
+
+.rightBorderedDiv {
+    width: 70%;
+    left: 5%;
+    position: relative;
+
+    text-align: justify;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex: 6;
+
+    margin-bottom: 15px;
+    margin-top: 10px;
+    padding: 10px;
+
+    background-color: #f0f0f078;
+
+    border: 5px solid #A1EEBD;
+    border-radius: 15px;
+
+    opacity: 0;
+    transition: opacity 0.5s ease-in;
+}
+
+.leftBorderedDiv {
+    width: 70%;
+    left: 25%;
+    position: relative;
+    text-align: justify;
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex: 6;
+
+    padding: 10px;
+    margin-bottom: 20px;
+
+    border: 5px solid #A1EEBD;
+    border-radius: 15px;
+
+    background-color: #f0f0f078;
+
+    opacity: 0;
+    transition: opacity 0.5s ease-in;
+}
+
+
+.projectContentContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+    height: vh
+}
+
+.projectContentContainerImg {
+    position: relative;
+    width: 70%;
+
+    margin-top: 20px;
+
+    border: 5px solid #effff5;
+}
+
+
+.iframeVideo {
+    position: relative;
+    width: 70%;
+
+    margin-top: 20px;
+
+    border: 5px solid #effff5;
+    aspect-ratio: 16/9;
+}
+
+
+
+.projectContentContainer p {
+    flex: 2;
+
+    margin: 10px;
+    max-width: 70%;
+}
+
+
+.projectContentContainer h5 {
+    flex: 2;
+    max-width: 70%;
+    position: relative;
+}
+
+#betweenProjectsAndTechStack {
+    background: linear-gradient(to bottom, #A1EEBD, #F6F7C4);
+    width: vw;
+    height: 70px;
+}
+
+#techStack {
+    width: vw;
+    background-color: #F6F7C4;
+
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+
+}
+
+#techStackContainer {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+    width: 30%;
+    background: transparent;
+    background-color: #f0f0f06a;
+
+    border: 5px solid #fcff4969;
+    border-radius: 15px;
+
+    opacity: 0;
+    transition: opacity 0.5s ease-in;
+}
+
+.techStackStack {
+    background-color: #f0f0f07e;
+    border-radius: 15px;
+    border: 5px solid #F6F7C4;
+    width: 30em;
+}
+
+#betweenProjectsAndContact {
+    background: linear-gradient(to bottom, #F6F7C4, #F6D6D6);
+    width: vw;
+    height: 70px;
+}
+
+
+footer {
+    width: vw;
+    background-color: #F6D6D6;
+
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+
+}
+
+.flexRow {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.verticalSpacerOne {
+    padding-bottom: 12px;
+    display: flex;
+    position: relative;
+}
+
+.verticalSpacerTwo {
+    padding-bottom: 12px;
+    display: flex;
+    position: relative;
+}
+
+.playStoreIconHolder {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    width: vw;
+    justify-content: center;
+    margin-top: 15px;
+    margin-bottom: 5px;
+}
+
+img {
+
+    width: 100px position: static
+}
+
+h1 {
+    font-size: 60px;
+}
+
+h2 {
+    font-size: 30px;
+}
+
+h3 {
+    font-size: 25px;
+}
+
+h4 {
+    font-size: 18px;
+}
+
+p {
+    font-size: 16px;
+}
+
+a {
+    color: black;
+    font-weight: bold;
+    text-decoration: underline;
+}
